# projx

./: .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SKILL.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
.githooks/: pre-commit
.github/: FUNDING.yml  demo.tape
admin-panel/: .env.example  .env.test  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  README.md  README.md.ejs  go.mod  go.sum
cli/: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: README.md  admin-panel-v2.md  design-system.md  feature-templates.md  proposal.md  requirements.md
e2e/: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
express/: .dockerignore  .env.example  .env.test  CLAUDE.md  Dockerfile.ejs  README.md.ejs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
fastapi/: .dockerignore  .env.example  .env.test  .gitignore  .importlinter  .pip-audit-ignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  audit.sh  main.py  migrate.py  pyproject.toml  scaffold.py  test.py
fastapi/src/: _sentry.py  app.py  exception_handlers.py
fastapi/src/configs/: _auth.py  _database.py
fastapi/src/entities/: __init__.py
fastapi/src/entities/audit_log/: _model.py
fastapi/src/entities/base/: __init__.py  _auto_schema.py  _controller.py  _expand.py  _model.py  _registry.py  _repository.py  _service.py
fastapi/src/entities/service_config/: __init__.py  _model.py  _repository.py
fastapi/src/middlewares/: __init__.py  _authn.py  _authz.py  _body_limit.py  _permission_resolvers.py  _public_paths.py  _request_id.py  _security_headers.py  _user_context.py
fastapi/src/migrations/: env.py
fastapi/src/migrations/versions/: 0af612617347_init_template_with_auto_audit_logging.py
fastapi/src/utils/: __init__.py  _crypto.py  _safe_sync.py
fastapi/tests/: base_entity_api_test.py  conftest.py  test_app.py  test_audit_full_surface.py  test_audit_log_entity.py  test_auth_config.py  test_authz.py  test_auto_schema.py  test_auto_schema_hardened.py  test_base_crud.py  test_controller_http.py  test_crypto.py  test_entity_coverage.py  test_exception_handlers.py  test_expand.py  test_field_privacy.py  test_permission_resolvers.py  test_registry_hardened.py  test_registry_import.py  test_repository_hardened.py  test_safe_sync.py  test_scaffold.py  test_sentry.py  test_service_config.py
fastify/: .dockerignore  .env.example  .env.test  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  Dockerfile.ejs  README.md  docker-compose.dev.yml  ecosystem.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  Dockerfile.ejs  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  nginx.conf.ejs  package-lock.json  package.json  pnpm-lock.yaml  security-headers.inc  tsconfig.json  vite.config.ts
go/: .env.example  .env.test  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum  main.go
infra/: .env.example  .gitignore  CLAUDE.md  README.md
laravel/: .env.example  .env.testing  .gitignore  CLAUDE.md  Dockerfile  artisan  composer.json  phpstan.neon  phpunit.xml  pint.json
mobile/: .env.example  .gitignore  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
nextjs/: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile.ejs  docker-entrypoint.sh  eslint.config.js  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts  tsconfig.json  vitest.config.ts
rust/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile
rust/src/: apperr.rs  error.rs  health.rs  lib.rs  main.rs  ratelimit.rs  serviceconfig.rs  sync.rs
rust/src/audit/: actor.rs  handler.rs  layer.rs  migrate.rs  mod.rs  model.rs  schema.sql  writer.rs
rust/src/auth/: middleware.rs  mod.rs  verifier.rs
rust/src/entities/: auto_routes.rs  mod.rs  query.rs  registry.rs  types.rs
rust/src/middleware/: cors.rs  logging.rs  mod.rs  recover.rs  request_id.rs
rust/src/posts/: mod.rs
rust/src/util/: env.rs  httputil.rs  mod.rs  uuid_v4.rs
rust/tests/: audit_integration.rs
scripts/: CLAUDE.md  check-bundle-size.sh  check-bundle-size.test.sh  ci-gen-compile.sh  ci-local.sh  ci-runner-gc.sh  ci-scaffold-matrix.sh  projx-dirs.sh  projx-dirs.test.sh  scaffold-fuzz.py  setup-aws.sh  setup-docker.sh  setup-ssl.sh  setup.sh  style-check.py  validate-nginx-config.sh
vitejs/: .dockerignore  .env.example  README.md  (+7 more)
(+990 files in other folders)
