[package]
name = "projx"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "projx"
path = "src/main.rs"

[lib]
name = "projx"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["request-id", "trace", "cors", "set-header"] }
hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"

sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
    "postgres-array",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret"] }
base32 = "0.5"

aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"
once_cell = "1"

lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
    "pool",
] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
    "postgres-array",
    "mock",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
